force-app/main/default/objects/Tenant__c/fields/Initial_Reading__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reading__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Meter reading at move-in</description>
    <label>Initial Meter Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>