force-app/main/default/objects/Tenant__c/fields/Latest_Reading__c.field-meta.xml
<CustomField>
    <fullName>Latest_Reading__c</fullName>
    <description>Auto-updated when new readings are added</description>
    <label>Latest Meter Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>