force-app/main/default/objects/Tenant__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <description>Physical meter number</description>
    <label>Meter Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>