force-app/main/default/objects/Tenant__c/fields/Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Date__c</fullName>
    <description>Date when tenant moved in</description>
    <label>Move-in Date</label>
    <type>Date</type>
</CustomField>