force-app/main/default/objects/Tenant__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Optional remarks</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>