force-app/main/default/objects/Tenant__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <description>Room or flat identifier (e.g. &quot;Room 101&quot;)</description>
    <label>Room Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>